Tue Aug 22 09:49:48 UTC 2006  Simon McQueen  <sm@prismtech.com>

        * tao/Client_Strategy_Factory.h:
        * tao/Client_Strategy_Factory.cpp:
        * tao/Fault_Tolerance_Service.h:
        * tao/Fault_Tolerance_Service.inl:
        * tao/Fault_Tolerance_Service.cpp:
        * tao/ORB.h:
        * tao/ORB.cpp:
        * tao/default_client.h:
        * tao/default_client.cpp:

          Remove spurious FT methods. This fixes bug #2644.

Tue Aug 22 09:26:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PI_Server.mpc:
          Removed invalid -Sc flag, thanks to Simon McQueen for reporting
          this.

Tue Aug 22 07:45:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Event/ECG_UDP_Out_Endpoint.inl:
          Added missing include

Mon Aug 21 21:38:15 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * docs/tutorials/Quoter/RTCORBA/Stock_Database.h
        * docs/tutorials/Quoter/RTCORBA/Distributor_i.cpp
        * docs/tutorials/Quoter/RTCORBA/Stock_Database.tpp

          Removed a dependancy that the Stock_Database had on IDL.

Mon Aug 21 18:42:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Seq_Var_T.{cpp,inl}:
          Moved include of OS_Memory.h from cpp to inl file to resolve
          compile problems when building static and TAO_NO_COPY_OCTET_SEQUENCES
          is defined to 0. This file is included to get ACE_NEW which is
          only used in the inl file

Mon Aug 21 18:04:51 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/tests/InterfaceRepo/IDL3_Test/idl3_client.h:
        * orbsvcs/tests/InterfaceRepo/IDL3_Test/idl3_client.cpp:

          Changed a CORBA::Boolean class member to native boolean,
          since it isn't used in a CORBA call.

        * orbsvcs/tests/InterfaceRepo/IDL3_Test/test.idl:

          Added a workaround IDL module called 'Components',
          containing just enough for the IFR loader to look up